Add TimetableHandler, code revisions
