# cmd/server/apihandlers.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 	"time"
 
+	"github.com/DislikesSchool/EduPage2-server/edupage"
 	"github.com/gin-gonic/gin"
 )
 
@@ -14,28 +15,12 @@ import (
 // @Tags timeline
 // @Param token header string true "JWT token"
 // @Produce json
-// @Success 200 {object} RecentTimelineSuccessResponse
+// @Success 200 {object} Timeline
 // @Failure 401 {object} RecentTimelineUnauthorizedResponse
 // @Failure 500 {object} RecentTimelineInternalErrorResponse
 // @Router /api/timeline/recent [get]
 func RecentTimelineHandler(c *gin.Context) {
-	claims, err := getClaims(c)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
-		return
-	}
-	userID := claims["userID"].(string)
-	username := claims["username"].(string)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
-		return
-	}
-
-	client, ok := clients[userID+username]
-	if !ok {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "client not found"})
-		return
-	}
+	client := c.MustGet("client").(*edupage.EdupageClient)
 
 	timeline, err := client.GetRecentTimeline()
 	if err != nil {
@@ -54,34 +39,19 @@ func RecentTimelineHandler(c *gin.Context) {
 // @Param token header string true "JWT token"
 // @Param range query TimelineRequest true "Date range"
 // @Produce json
-// @Success 200 {object} TimelineSuccessResponse
+// @Success 200 {object} Timeline
 // @Failure 401 {object} TimelineUnauthorizedResponse
 // @Failure 500 {object} TimelineInternalErrorResponse
 // @Router /api/timeline [get]
 func TimelineHandler(c *gin.Context) {
-	claims, err := getClaims(c)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
-		return
-	}
-	userID := claims["userID"].(string)
-	username := claims["username"].(string)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
-		return
-	}
-
-	client, ok := clients[userID+username]
-	if !ok {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "client not found"})
-		return
-	}
+	client := c.MustGet("client").(*edupage.EdupageClient)
 
 	dateFromString := c.Query("from")
 	dateToString := c.Query("to")
 
 	var dateTo time.Time
 	var dateFrom time.Time
+	var err error
 
 	if dateToString == "" {
 		dateTo = time.Now()
@@ -104,26 +74,64 @@ func TimelineHandler(c *gin.Context) {
 	c.JSON(http.StatusOK, timeline)
 }
 
+// RecentTimetableHandler godoc
+// @Summary Get the user's recent timetable
+// @Schemes
+// @Description Returns the user's timetable from before yesterday to 7 days in the future.
+// @Tags timetable
+// @Param token header string true "JWT token"
+// @Produce json
+// @Success 200 {object} model.Timetable
+// @Failure 401 {object} TimetableUnauthorizedResponse
+// @Failure 500 {object} TimetableInternalErrorResponse
+// @Router /api/timetable/recent [get]
 func RecentTimetableHangler(c *gin.Context) {
-	claims, err := getClaims(c)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
-		return
-	}
-	userID := claims["userID"].(string)
-	username := claims["username"].(string)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
-		return
-	}
-
-	client, ok := clients[userID+username]
-	if !ok {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "client not found"})
-		return
-	}
+	client := c.MustGet("client").(*edupage.EdupageClient)
 
 	timetable, err := client.GetRecentTimetable()
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, timetable)
+}
+
+// RecentTimetableHandler godoc
+// @Summary Get the user's  timetable
+// @Schemes
+// @Description Returns the user's timetable from date specified to date specified or today.
+// @Tags timetable
+// @Param token header string true "JWT token"
+// @Param range query TimetableRequest true "Date range"
+// @Produce json
+// @Success 200 {object} model.Timetable
+// @Failure 401 {object} TimetableUnauthorizedResponse
+// @Failure 500 {object} TimetableInternalErrorResponse
+// @Router /api/timetable [get]
+func TimetableHandler(c *gin.Context) {
+	client := c.MustGet("client").(*edupage.EdupageClient)
+
+	dateFromString := c.Query("from")
+	dateToString := c.Query("to")
+
+	var dateTo time.Time
+	var dateFrom time.Time
+	var err error
+
+	if dateToString == "" {
+		dateTo = time.Now()
+	} else {
+		dateTo, err = time.Parse(time.RFC3339, dateToString)
+	}
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
+		return
+	}
+
+	dateFrom, err = time.Parse(time.RFC3339, dateFromString)
+
+	timetable, err := client.GetTimetable(dateFrom, dateTo)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
