# docs/swagger.json
@@ -44,7 +44,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.TimelineSuccessResponse"
+                            "$ref": "#/definitions/main.Timeline"
                         }
                     },
                     "401": {
@@ -85,7 +85,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.RecentTimelineSuccessResponse"
+                            "$ref": "#/definitions/main.Timeline"
                         }
                     },
                     "401": {
@@ -98,6 +98,101 @@
                         "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/main.RecentTimelineInternalErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/timetable": {
+            "get": {
+                "description": "Returns the user's timetable from date specified to date specified or today.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "timetable"
+                ],
+                "summary": "Get the user's  timetable",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "example": "2022-01-01T00:00:00Z2022-01-01T00:00:00Z",
+                        "name": "from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "default": "time.Now()",
+                        "example": "2022-01-01T00:00:00Z",
+                        "name": "to",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Timetable"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.TimetableUnauthorizedResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.TimetableInternalErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/timetable/recent": {
+            "get": {
+                "description": "Returns the user's timetable from before yesterday to 7 days in the future.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "timetable"
+                ],
+                "summary": "Get the user's recent timetable",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Timetable"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.TimetableUnauthorizedResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.TimetableInternalErrorResponse"
                         }
                     }
                 }
@@ -367,29 +462,6 @@
                 "error": {
                     "type": "string",
                     "example": "failed to create payload"
-                },
-                "success": {
-                    "type": "boolean",
-                    "example": false
-                }
-            }
-        },
-        "main.RecentTimelineSuccessResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": ""
-                },
-                "success": {
-                    "type": "boolean",
-                    "example": true
-                },
-                "timeline": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/main.Timeline"
-                    }
                 }
             }
         },
@@ -399,10 +471,6 @@
                 "error": {
                     "type": "string",
                     "example": "Unauthorized"
-                },
-                "success": {
-                    "type": "boolean",
-                    "example": false
                 }
             }
         },
@@ -429,10 +497,6 @@
                 "error": {
                     "type": "string",
                     "example": "failed to create payload"
-                },
-                "success": {
-                    "type": "boolean",
-                    "example": false
                 }
             }
         },
@@ -474,41 +538,30 @@
                 }
             }
         },
-        "main.TimelineSuccessResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": ""
-                },
-                "from": {
-                    "type": "string"
-                },
-                "success": {
-                    "type": "boolean",
-                    "example": true
-                },
-                "timeline": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/main.Timeline"
-                    }
-                },
-                "to": {
-                    "type": "string"
-                }
-            }
-        },
         "main.TimelineUnauthorizedResponse": {
             "type": "object",
             "properties": {
                 "error": {
                     "type": "string",
                     "example": "Unauthorized"
-                },
-                "success": {
-                    "type": "boolean",
-                    "example": false
+                }
+            }
+        },
+        "main.TimetableInternalErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "failed to create payload"
+                }
+            }
+        },
+        "main.TimetableUnauthorizedResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "Unauthorized"
                 }
             }
         },
@@ -556,6 +609,83 @@
             "properties": {
                 "uint8": {
                     "type": "integer"
+                }
+            }
+        },
+        "model.Timetable": {
+            "type": "object",
+            "properties": {
+                "days": {
+                    "description": "key format is YYYY-MM-dd or 2006-01-02",
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/definitions/model.TimetableItem"
+                        }
+                    }
+                }
+            }
+        },
+        "model.TimetableItem": {
+            "type": "object",
+            "properties": {
+                "classids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "classroomids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "colors": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "date": {
+                    "type": "string"
+                },
+                "endtime": {
+                    "type": "string"
+                },
+                "groupnames": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "igroupid": {
+                    "type": "string"
+                },
+                "starttime": {
+                    "type": "string"
+                },
+                "studentids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "subjectid": {
+                    "type": "string"
+                },
+                "teacherids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "type": {
+                    "type": "string"
+                },
+                "uniperiod": {
+                    "type": "string"
                 }
             }
         }
